--- a/index.html
+++ b/index.html
@@ -204,8 +204,8 @@
         
         const ACCESS_CONFIG = {
             validUser: "admin",        // Your Username
-            validPass: "rehan123",     // Your Password
-            expiryDate: "2026-12-30"   // Format: YYYY-MM-DD (Expiration Date)
+            validPass: "bronx",     // Your Password
+            expiryDate: "2026-01-29"   // Format: YYYY-MM-DD (Expiration Date)
         };
 
         const API_KEY = "bronx-api";   // API Key parameter
