--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
 
             try {
                 // API Call
-                const url = `https://bronx-api-sable.vercel.app/search?num=${phone}&key=${API_KEY}`;
+                const url = `https://bronx-api-sable.vercel.app/search?num=${phone}&key=${bronx-api}`;
                 const response = await fetch(url);
                 const data = await response.json();
 
