--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
             <img src="https://i.ibb.co/YTjW35Hs/file-000000007b0872069c1067c615adaa48.png" alt="Profile" class="profile-pic">
         </div>
 
-        <h1>REHAN MALIK</h1>
+        <h1>BRONX ULTRA</h1>
         <div class="subtitle">Telegram ID<br><span style="color:var(--neon-blue)">@BRONX_ULTRA</span></div>
 
         <div style="display: flex; gap: 5px;">
