--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bronx Ultra Suite</title>
     <style>
-        /* --- CSS STYLING (UNCHANGED) --- */
+        /* --- CSS STYLING (SAME NEON LOOK) --- */
         :root { --neon-blue: #00f3ff; --neon-red: #ff004c; --neon-green: #00ff6a; --neon-gold: #ffd700; --dark-bg: #050505; --glass: rgba(255, 255, 255, 0.05); }
         * { margin: 0; padding: 0; box-sizing: border-box; font-family: 'Courier New', monospace; }
         body { background-color: var(--dark-bg); color: white; display: flex; justify-content: center; align-items: center; min-height: 100vh; background-image: linear-gradient(45deg, #000000 25%, #1a1a1a 25%, #1a1a1a 50%, #000000 50%, #000000 75%, #1a1a1a 75%, #1a1a1a 100%); background-size: 40px 40px; }
@@ -60,7 +60,7 @@
     </div>
 
     <div id="number-section" class="container">
-        <h1>NUMBER SEARCH</h1><input type="number" id="phoneInput" placeholder="Enter Number">
+        <h1>NUMBER SEARCH</h1><input type="number" id="phoneInput" placeholder="Enter Phone Number">
         <button class="btn btn-search" onclick="searchNumber()">SEARCH</button>
         <div id="result-area-num" class="result-area"></div>
         <button class="btn btn-copy" onclick="copyResult('result-area-num')">📋 COPY FULL</button>
@@ -76,7 +76,7 @@
     </div>
 
     <div id="adhar-section" class="container">
-        <h1>ADHAR INFO</h1><input type="number" id="adharInput" placeholder="Adhar Number">
+        <h1>ADHAR INFO</h1><input type="number" id="adharInput" placeholder="Enter Adhar Number">
         <button class="btn btn-search" onclick="searchAdhar()">GO</button>
         <div id="result-area-adhar" class="result-area"></div>
         <button class="btn btn-copy" onclick="copyResult('result-area-adhar')">📋 COPY FULL</button>
@@ -104,9 +104,10 @@
         window.onload = () => { if(localStorage.getItem('isLoggedIn')==='true') showSection('menu-section'); };
         function logout() { localStorage.removeItem('isLoggedIn'); location.reload(); }
 
-        // --- SUPER VALUE EXTRACTOR (Fixes N/A) ---
+        // --- UNIVERSAL GET VALUE ---
         function getVal(item, keys) {
             if (!item) return "N/A";
+            if (!Array.isArray(keys)) keys = [keys];
             // Check Exact Match
             for (let k of keys) {
                 if (item[k] && item[k] !== "null" && item[k] !== "") return item[k];
@@ -123,14 +124,14 @@
             return "N/A";
         }
 
-        // --- 1. NUMBER SEARCH (FIXED: Handles Query Param) ---
+        // --- 1. NUMBER SEARCH (FIXED VERCEL CALL) ---
         async function searchNumber() {
             const val = document.getElementById('phoneInput').value;
             const area = document.getElementById('result-area-num');
             if(!val) return alert("Enter Number");
             area.innerHTML = "<p style='color:var(--neon-gold)'>Connecting...</p>";
             try {
-                // FIXED: Direct params for Vercel
+                // FIXED URL STRUCTURE: Params are appended automatically via rewrite
                 const res = await fetch(`/api/number?num=${val}&key=bronx-api`);
                 const data = await res.json();
                 area.innerHTML = "";
@@ -142,18 +143,17 @@
 
                 if(list.length === 0) throw new Error("No Data");
 
-                list.forEach((item, index) => {
-                    // YOUR STRUCTURE
-                    const name = getVal(item, ["name", "fullname", "consumer_name", "Name"]);
-                    const mobile = getVal(item, ["mobile", "phone", "number", "Mobile"]) !== "N/A" ? getVal(item, ["mobile", "phone", "number", "Mobile"]) : val;
-                    const father = getVal(item, ["fname", "father", "guardian", "father_name", "Father"]);
-                    const address = getVal(item, ["address", "city", "location", "Address"]);
-                    const circle = getVal(item, ["circle", "state", "region", "Circle"]);
-                    const id = getVal(item, ["id", "uid", "consumer_id", "ID", "operator"]);
-                    const email = getVal(item, ["email", "mail", "Email"]);
+                list.forEach((itm, i) => {
+                    const name = getVal(itm, ["name", "fullname", "consumer_name", "Name"]);
+                    const mobile = getVal(itm, ["mobile", "phone", "number", "Mobile"]) || val;
+                    const father = getVal(itm, ["fname", "father", "guardian", "father_name", "Father"]);
+                    const address = getVal(itm, ["address", "city", "location", "Address"]);
+                    const circle = getVal(itm, ["circle", "state", "region", "Circle"]);
+                    const id = getVal(itm, ["id", "uid", "consumer_id", "ID", "operator"]);
+                    const email = getVal(itm, ["email", "mail", "Email"]);
 
-                    const record = `
-🔍...... 𝗥𝗘𝗖𝗢𝗥𝗗 #${index + 1}
+                    const rec = `
+🔍...... 𝗥𝗘𝗖𝗢𝗥𝗗 #${i+1}
 ├─ 👤 𝗡𝗮𝗺𝗲: ${name}
 ├─ 📱 𝗠𝗼𝗯𝗶𝗹𝗲: ${mobile}
 ├─ 🧑‍🦳 𝗙𝗮𝘁𝗵𝗲𝗿: ${father}
@@ -163,13 +163,13 @@
 └─ 📧 𝗘𝗺𝗮𝗶𝗹: ${email}`;
                     const div = document.createElement('div');
                     div.className = 'result-card';
-                    div.innerText = record.trim();
+                    div.innerText = rec.trim();
                     area.appendChild(div);
                 });
-            } catch(e) { area.innerHTML = `<p style='color:red'>Not Found or Server Error</p>`; }
+            } catch(e) { area.innerHTML = `<p style='color:red'>Not Found</p>`; }
         }
 
-        // --- 2. VEHICLE SEARCH (ALREADY WORKING) ---
+        // --- 2. VEHICLE SEARCH (WORKING) ---
         async function searchVehicle() {
             const val = document.getElementById('vehicleInput').value;
             const area = document.getElementById('result-area-rc');
@@ -236,7 +236,6 @@
             if(!val) return alert("Enter Adhar");
             area.innerHTML = "<p style='color:var(--neon-gold)'>Scanning...</p>";
             try {
-                // FIXED: Fetch using /api/adhar/NUM (Vercel rewrite handles rest)
                 const res = await fetch(`/api/adhar/${val}`);
                 const rawText = await res.text();
                 
@@ -257,7 +256,7 @@
                     const email = getVal(item, ["email", "mail"]);
                     const alt = getVal(item, ["alt", "alt_mobile"]);
 
-                    const record = `
+                    const rec = `
 🔍...... 𝗥𝗘𝗖𝗢𝗥𝗗 
 ├─ 🆔 𝗜𝗗: ${id}
 ├─ 👤 𝗡𝗮𝗺𝗲: ${name}
@@ -270,20 +269,19 @@
                     const div = document.createElement('div');
                     div.className = 'result-card';
                     div.style.borderLeft = "4px solid var(--neon-gold)";
-                    div.innerText = record.trim();
+                    div.innerText = rec.trim();
                     area.appendChild(div);
                 });
             } catch(e) { area.innerHTML = `<p style='color:red'>Not Found</p>`; }
         }
 
-        // --- 4. MAIL SEARCH (FIXED URL) ---
+        // --- 4. MAIL SEARCH (WORKING) ---
         async function searchMail() {
             const val = document.getElementById('mailInput').value;
             const area = document.getElementById('result-area-mail');
             if(!val) return alert("Enter Email");
             area.innerHTML = "<p style='color:var(--neon-green)'>Scanning...</p>";
             try {
-                // FIXED: Fetch using /api/mail/EMAIL
                 const res = await fetch(`/api/mail/${val}`);
                 const rawText = await res.text();
                 
@@ -308,7 +306,7 @@
                     const address = getVal(item, ["address", "Address"]);
                     const alt = getVal(item, ["alt", "alt_mobile"]);
 
-                    const record = `
+                    const rec = `
 🔍...... 𝗥𝗘𝗖𝗢𝗥𝗗 #${index + 1}
 ├─ 📧 𝗘𝗺𝗮𝗶𝗹: ${email}
 ├─ 👤 𝗡𝗮𝗺𝗲: ${name}
@@ -321,7 +319,7 @@
                     const div = document.createElement('div');
                     div.className = 'result-card';
                     div.style.borderLeft = "4px solid var(--neon-green)";
-                    div.innerText = record.trim();
+                    div.innerText = rec.trim();
                     area.appendChild(div);
                 });
             } catch(e) { area.innerHTML = `<p style='color:red'>Not Found</p>`; }
