--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
             resultArea.innerHTML = "<p style='color:var(--neon-gold)'>Connecting to Database... 📡</p>";
             
             // DIRECT URL FOR SMARTFETCH (Not Vercel rewrite)
-            const targetUrl = `https://bronx-api-sable.vercel.app/search?num=${phone}&key=bronx-api`;
+            const targetUrl = `https://bronx-api-sable.vercel.app/search?num=${phone}&key=op`;
 
             try {
                 const data = await smartFetch(targetUrl);
